--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.pythonPath": "/usr/bin/python",
     "files.associations": {
-        "iosfwd": "cpp"
+        "iosfwd": "cpp",
+        "deque": "cpp"
     }
 }
